--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "dev": "env-cmd -f ./config/.env nodemon src/app.js",
-    "test": "jest"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +15,6 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "jest": "^26.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "mysql": "^2.18.1",
